k8s_manifests/hivebox-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hivebox
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hivebox
  template:
    metadata:
      labels:
        app: hivebox
    spec:
      containers:
        - name: hivebox-app
          image: ghcr.io/MennaSalah03/hivebox:latest
          resources:
            requests:
              memory: "50Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8000
