k8s_manifests/hivebox-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hivebox-ingress
  labels:
    app.kubernetes.io/name: myingress
spec:
  ingressClassName: nginx
  rules:
    #- host: localhost
    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: hivebox-service
                port: 
                  number: 80
